--- a/styling/scss/components/_nav.scss
+++ b/styling/scss/components/_nav.scss
@@ -8,7 +8,7 @@ $desktop-nav-padding-vertical: 10px;
     overflow-y: hidden;
     .search-bar {
         position: fixed;
-        z-index: 20;
+        z-index: 120;
         background-color: $white;
         width: 100%;
         box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.25);
@@ -56,7 +56,7 @@ $desktop-nav-padding-vertical: 10px;
         left: 0;
         width: 100%;
         height: 100vh;
-        z-index: 10;
+        z-index: 110;
         background-color: $black;
         opacity: 0;
         transition: all 0.3s;
@@ -70,6 +70,7 @@ $desktop-nav-padding-vertical: 10px;
     min-height: 60px;
     position: fixed;
     transition: all 0.2s;
+    z-index: 101;
     .nav-wrap {
         position: relative;
         margin-left: auto;
@@ -81,7 +82,7 @@ $desktop-nav-padding-vertical: 10px;
         height: 40px;
         width: auto;
         position: absolute;
-        z-index: 30;
+        z-index: 130;
         transition: all 0.2s;
         opacity: 1;
         visibility: visible;
@@ -90,7 +91,7 @@ $desktop-nav-padding-vertical: 10px;
         height: 40px;
         width: auto;
         position: absolute;
-        z-index: 31;
+        z-index: 131;
         visibility: hidden;
         opacity: 0;
         transition: all 0.2s;
@@ -279,7 +280,7 @@ $desktop-nav-padding-vertical: 10px;
     overflow-y: hidden;
     .mobile-search-bar {
         position: fixed;
-        z-index: 100;
+        z-index: 200;
         background-color: $white;
         width: 100%;
         box-shadow: 0 2px 6px 0px rgba(0, 0, 0, 0.25);
@@ -320,7 +321,7 @@ $desktop-nav-padding-vertical: 10px;
         left: 0;
         width: 100%;
         height: 100vh;
-        z-index: 99;
+        z-index: 199;
         background-color: $black;
         opacity: 0;
         transition: all 0.3s;
@@ -334,7 +335,7 @@ $desktop-nav-padding-vertical: 10px;
     min-height: 48px;
     position: fixed;
     transition: all 0.2s;
-    z-index: 50;
+    z-index: 150;
     .mobile-nav-bar {
         .content-bar {
             position: relative;
@@ -447,11 +448,11 @@ $desktop-nav-padding-vertical: 10px;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 40;
+    z-index: 140;
     .mobile-nav-slide {
         left: -100%;
         position: fixed;
-        z-index: 41;
+        z-index: 141;
         background-color: $white;
         top: 48px;
         height: calc(100vh - 48px);
@@ -528,7 +529,7 @@ $desktop-nav-padding-vertical: 10px;
         left: 0;
         width: 100%;
         height: 100vh;
-        z-index: 38;
+        z-index: 138;
         background-color: $black;
         opacity: 0;
         transition: all 0.3s;
@@ -614,9 +615,6 @@ $desktop-nav-padding-vertical: 10px;
             }
             .left {
                 margin-right: auto;
-            }
-            .right {
-
             }
         }
     }
